--- a/main.tex
+++ b/main.tex
@@ -151,8 +151,8 @@ Technical writing
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item
-	\textbf{22T3}: Designed, implemented, and lectured
-	a new course \\
+	\textbf{22T3}: Proposed, designed, implemented, and lectured
+	a brand new course \\
 	\href{https://www.handbook.unsw.edu.au/undergraduate/courses/current/COMP6991}
 		 {\underline{COMP6991 - Solving Modern Programming Problems with Rust}}
 \item First offering of 100 students, with a teaching team of 6.
