--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,7 @@ Atlassian CTF \\
 \textbf{85 HD} Software Eng. Fundamentals \\
 \textbf{SY} Extended Operating Systems \\
 \textbf{SY} Extended Security Engineering \\
+\textbf{86 HD} Extended WebApp Security \\
 \textbf{93 HD} Software Sys Des \& Implementat'n \\
 \textbf{95 HD} Special Project A \\
 \textbf{94 HD} Prog. Lang's \& Compilers \\
@@ -144,7 +145,7 @@ Virtual Machine.
 
 %------------------------------------------------
 
-\vspace{0.6cm}
+\vspace{0.3cm}
 \subsection{\LaTeX \ \ Source}
 
 \href{https://github.com/insou22/resume}
