--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 %----------------------------------------------------------------------------------------
 
 % The left column takes up 33% of the text width of the page
-\begin{minipage}[t]{0.33\textwidth}
+\begin{minipage}[t]{0.35\textwidth}
 
 %------------------------------------------------
 % Education
@@ -85,7 +85,7 @@ Atlassian CTF \\
 \textbf{SY} Extended Operating Systems \\
 \textbf{SY} Extended Security Engineering \\
 \textbf{86 HD} Extended WebApp Security \\
-\textbf{93 HD} Software Sys Des \& Implementat'n \\
+\textbf{93 HD} Software Sys. Des. \& Implementation \\
 \textbf{95 HD} Special Project A \\
 \textbf{94 HD} Prog. Lang's \& Compilers \\
 \textbf{93 HD} Concepts of Prog. Langs \\
@@ -162,7 +162,7 @@ Virtual Machine.
 %----------------------------------------------------------------------------------------
 %
 % The right column takes up 66% of the text width of the page
-\begin{minipage}[t]{0.66\textwidth}
+\begin{minipage}[t]{0.63\textwidth}
 
 %------------------------------------------------
 % Experience
