--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \subsection{UNSW}
 
 \descript{BSc. Computer Science}
-\location{Grad. 05/2022, HD WAM}
+\location{Grad. 05/2022 with High Distinction}
 
 \sectionspace
 
@@ -64,33 +64,18 @@ in CSE (Year 1) \\
 Co-op Scholarship \\
 
 \textbf{2019}
-Dean's Honours List \\
+Dean's Honours List
 {\footnotesize \textit{\textbf{(Highly Commended) }}} \\
 
 \textbf{2020}
-Dean's Honours List \\
+Dean's Honours List
 {\footnotesize \textit{\textbf{(Highly Commended) }}} \\
 
 \textbf{2020}
-Atlassian CTF \\
+Atlassian CTF
 {\footnotesize \textit{\textbf{(5th Place) }}} \\
 
 \sectionspace
-
-\subsection{Marks}
-\textbf{98 HD} Programming Fundamentals \\
-\textbf{100 HD} Computer Systems Fundamentals \\
-\textbf{90 HD} Data Structures and Algorithms \\
-\textbf{85 HD} Software Eng. Fundamentals \\
-\textbf{SY} Extended Operating Systems \\
-\textbf{SY} Extended Security Engineering \\
-\textbf{86 HD} Extended WebApp Security \\
-\textbf{93 HD} Software Sys. Des. \& Implementation \\
-\textbf{95 HD} Special Project A \\
-\textbf{94 HD} Prog. Lang's \& Compilers \\
-\textbf{93 HD} Concepts of Prog. Langs \\
-\textbf{94 HD} Educational Psychology \\
-\textbf{93 HD} (In-)Formal Methods
 
 %------------------------------------------------
 % Projects
@@ -101,10 +86,10 @@ Atlassian CTF \\
 \href{https://github.com/insou22/mipsy}
 	{\underline{mipsy}}; \textbf{ Rust}
 
-An education-focused MIPS32 emulator
-aiming to provide excellent diagnostics
-and debugging capabilities for students
-learning assembly code.
+Invented \textbf{mipsy}, the education-focused
+MIPS32 emulator aiming to provide excellent
+diagnostics and debugging capabilities for
+students learning assembly code.
 
 \vspace{6pt}
 
@@ -143,9 +128,24 @@ Virtual Machine.
 
 \sectionspace
 
+\section{Marks}
+\textbf{98 HD} Programming Fundamentals \\
+\textbf{100 HD} Computer Systems Fundamentals \\
+\textbf{90 HD} Data Structures and Algorithms \\
+\textbf{85 HD} Software Eng. Fundamentals \\
+\textbf{SY} Extended Operating Systems \\
+\textbf{SY} Extended Security Engineering \\
+\textbf{86 HD} Extended WebApp Security \\
+\textbf{93 HD} Software Sys. Des. \& Implementation \\
+\textbf{95 HD} Special Project A \\
+\textbf{94 HD} Prog. Lang's \& Compilers \\
+\textbf{93 HD} Concepts of Prog. Langs \\
+\textbf{94 HD} Educational Psychology \\
+\textbf{93 HD} (In-)Formal Methods
+
 %------------------------------------------------
 
-\vspace{0.3cm}
+\vspace{0.8cm}
 \subsection{\LaTeX \ \ Source}
 
 \href{https://github.com/insou22/resume}
@@ -267,8 +267,9 @@ Virtual Machine.
 \item Developed a highly available, scalable IVR system
 	  with AWS cloud system which cut costs and simplified
 	  existing systems.
-\item Secured internal wiki with cross-origin token-based
-	  auth for critical NRMA roadside driver demo videos
+\item Secured knowledge base platform with
+	  cross-origin token-based auth
+	  for critical NRMA operations
 	  with AWS Cognito, S3, federated through varying
 	  authentication platforms.
 \end{tightitemize}
