--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,8 @@
 
 \descript{BSc. Computer Science}
 \location{Grad. 05/2022 with High Distinction}
+Notable marks listed at:
+\href{https://marks.insou.dev}{\underline{marks.insou.dev}}
 
 \sectionspace
 
@@ -127,21 +129,21 @@ demonstrating low-level knowledge of the Java
 Virtual Machine.
 
 \sectionspace
+\section{Skills \& Tech}
 
-\section{Marks}
-\textbf{98 HD} Programming Fundamentals \\
-\textbf{100 HD} Computer Systems Fundamentals \\
-\textbf{90 HD} Data Structures and Algorithms \\
-\textbf{85 HD} Software Eng. Fundamentals \\
-\textbf{SY} Extended Operating Systems \\
-\textbf{SY} Extended Security Engineering \\
-\textbf{86 HD} Extended WebApp Security \\
-\textbf{93 HD} Software Sys. Des. \& Implementation \\
-\textbf{95 HD} Special Project A \\
-\textbf{94 HD} Prog. Lang's \& Compilers \\
-\textbf{93 HD} Concepts of Prog. Langs \\
-\textbf{94 HD} Educational Psychology \\
-\textbf{93 HD} (In-)Formal Methods
+Program safety \& correctness \\
+Teaching \& education \\
+Static program semantics \\
+Type systems \& compilers \\
+Linux systems-administration \\
+Systems programming \\
+Data-driven optimisation \\
+Programming language tooling \\
+Technical writing \\
+Rust, \ Java, \ JS, \ TS, \ Kotlin, \ C, \ Haskell \\
+Cloud: AWS, \ GCP, \ DigitalOcean \\
+Kubernetes, \ Docker, \ Rancher, \ Nginx
+
 
 %------------------------------------------------
 
