--- a/main.tex
+++ b/main.tex
@@ -48,26 +48,13 @@
 \subsection{UNSW}
 
 \descript{BSc. Computer Science}
-\location{Grad. 05/2022 with High Distinction}
+\location{Grad. May 2022 with High Distinction}
 Notable marks listed at:
 \href{https://marks.insou.dev}{\underline{marks.insou.dev}}
 
 \sectionspace
 
 \subsection{Awards}
-
-\textbf{2019}
-The Macquarie Performance \\
-Prize for highest academic performance
-in CSE (Year 1) \\
-{\footnotesize \textit{\textbf{(1st Place) }}} \\
-
-\textbf{2019}
-Co-op Scholarship \\
-
-\textbf{2019}
-Dean's Honours List
-{\footnotesize \textit{\textbf{(Highly Commended) }}} \\
 
 \textbf{2020}
 Dean's Honours List
@@ -76,6 +63,19 @@ Dean's Honours List
 \textbf{2020}
 Atlassian CTF
 {\footnotesize \textit{\textbf{(5th Place) }}} \\
+
+\textbf{2019}
+The Macquarie Performance \\
+Prize for highest academic performance
+in CSE (Year 1)
+{\footnotesize \textit{\textbf{(1st Place) }}} \\
+
+\textbf{2019}
+Co-op Scholarship \\
+
+\textbf{2019}
+Dean's Honours List
+{\footnotesize \textit{\textbf{(Highly Commended) }}} \\
 
 \sectionspace
 
@@ -88,10 +88,12 @@ Atlassian CTF
 \href{https://github.com/insou22/mipsy}
 	{\underline{mipsy}}; \textbf{ Rust}
 
-Invented \textbf{mipsy}, the education-focused
+Created \textbf{mipsy}, the education-focused
 MIPS32 emulator aiming to provide excellent
 diagnostics and debugging capabilities for
-students learning assembly code.
+students learning assembly code. \\
+Used by thousands of students in
+UNSW's Computer Systems Fundamentals course.
 
 \vspace{6pt}
 
@@ -116,7 +118,7 @@ assignments at speed.
 \href{https://cgi.cse.unsw.edu.au/~talloc/}
 	{\underline{talloc}}; \textbf{ JavaScript}
 
-Our full-stack application \& hiring platform
+Our full-stack application and hiring platform
 used by the school of CSE.
 
 \vspace{6pt}
@@ -192,8 +194,8 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 	\href{https://www.handbook.unsw.edu.au/undergraduate/courses/current/COMP1521}
 		 {\underline{COMP1521 - Computer Systems Fundamentals}}
 \item Approximately 800 enrolled students.
-\item Coordinated hiring \& timetabling followed by
-	  in-session management of 33 teaching staff over $\approx$ 14 weeks.
+\item Coordinated hiring and timetabling followed by
+	  in-session management of 33 teaching staff over 14 weeks.
 \item Managed overall administration and delivery of the course.
 \end{tightitemize}
 
@@ -209,14 +211,14 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \item Education, delivery, administration of Computer Science courses.
 \item Extensive Linux sysadmin,
 	  software development of course infrastructure.
-\item Teaching materials development, including software
-	  development of teaching tools (see: mipsy project).
-\item Teaching 1-3 classes each of 24 students per course offering.
-\item \textbf{COMP1521}: \textbf{Tutor} 20T2, 20T3,
-						 \textbf{Admin} 21T2, 21T3, 22T1
-\item \textbf{COMP2041}: \textbf{Admin} 21T1
-\item \textbf{COMP1511}: \textbf{AT}    19T2,
-						 \textbf{Tutor} 19T3, 20T1, 21T1.
+\item Development of teaching materials and tools,
+	  including mipsy project.
+\item Teaching 1-3 classes per course offering (24 students per class).
+\item \textbf{COMP1521}: \textbf{Tutor} 2020 T2, T3,
+						 \textbf{Admin} 2021 T2, T3, 2022 T1
+\item \textbf{COMP2041}: \textbf{Admin} 2021 T1
+\item \textbf{COMP1511}: \textbf{AT}    2019 T2,
+						 \textbf{Tutor} 2019 T3, 2020 T1, 2021 T1.
 \end{tightitemize}
 
 \sectionspace
@@ -226,10 +228,9 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \runsubsection{AWS}
 \descript{| Software Development Engineer}
 
-\location{Sep 2020 – Feb 2021 | Sydney, AUS}
+\location{Sep 2020 – Feb 2021 (6 month placement) | Sydney, AUS}
 \begin{tightitemize}
-\item Worked in the AWS Redshift Team (cloud big-data)
-	  in a 6-month placement.
+\item Redshift Team (cloud data warehousing, massively parallel processing).
 \item Consolidated previous 40+ step process for customers
 	  to load sample data into a single simple step.
 \item Maintained strong project ownership, collaborated
@@ -247,8 +248,8 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \location{Dec 2020 – Dec 2021 | Sydney, AUS \\
 		  Volunteering Position}
 \begin{tightitemize}
-\item Co-Directed Projects Subcommittee;
-	  7 direct-reports spanning 35 members.
+\item Co-directed Projects Subcommittee;
+	  7 direct reports spanning 35 members.
 \item Liaised between reports (individual teams) and
 	  CSESoc executive team to manage progress,
 	  strategy and vision.
@@ -286,9 +287,9 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \location{2015 – 2017 | FL, USA (Remote)}
 \begin{tightitemize}
 \item Designed a variety of systems, including cost effective
-	  dynamic pre-emptive VMs on Google GCP to run game-servers.
+	  dynamic pre-emptive VMs on Google GCP to run game servers.
 \item Worked on HTTP-based protocol with Java runtime bytecode
-	  manipulation to simplify API creation \& interoperability.
+	  manipulation to simplify API creation and interoperability.
 \end{tightitemize}
 
 \sectionspace
