--- a/main.tex
+++ b/main.tex
@@ -181,7 +181,7 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item
-	\textbf{22T3}: Proposed, designed, implemented, and lectured
+	\textbf{2022 T3}: Proposed, designed, implemented, and lectured
 	a brand new course \\
 	\href{https://www.handbook.unsw.edu.au/undergraduate/courses/current/COMP6991}
 		 {\underline{COMP6991 - Solving Modern Programming Problems with Rust}}
@@ -190,7 +190,7 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 	  including soliciting student feedback and
 	  iterating on design in response.
 \item
-	\textbf{22T2}: Lectured and administrated core course \\
+	\textbf{2022 T2}: Lectured and administrated core course \\
 	\href{https://www.handbook.unsw.edu.au/undergraduate/courses/current/COMP1521}
 		 {\underline{COMP1521 - Computer Systems Fundamentals}}
 \item Approximately 800 enrolled students.
@@ -246,7 +246,7 @@ Kubernetes, \ Docker, \ Rancher, \ Nginx
 \descript{| Projects Director (Technical)}
 
 \location{Dec 2020 – Dec 2021 | Sydney, AUS \\
-		  Volunteering Position}
+		  Volunteer Position}
 \begin{tightitemize}
 \item Co-directed Projects Subcommittee;
 	  7 direct reports spanning 35 members.
